--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@
 
 .font5vmin {
   font-size: 3vmin;
+  position: absolute;
+  top: 93vh;
+  left: 10vw;
 }
 
 @keyframes playerWindup {
@@ -545,7 +548,7 @@
   margin-top: 0.8vmin;
   margin-bottom: 0.8vmin;
   background-position: 0% 0%;
-  transition: background-color 0.3s;
+  transition: background-color 0.25s;
 }
 
 .power {
@@ -742,9 +745,12 @@
   padding: 0.02vmin;
   justify-content: space-evenly;
   align-items: top;
-  transition: filter 0.4s ease-out; 
+  transition: filter 0.2s ease-out; 
 }
-
+.monster-deck-row {
+  justify-content: space-between;
+  padding: 0 2vw;
+}
 
 .targeted-fire {
     border: 6px dashed red;
@@ -932,26 +938,6 @@
   position: relative;
 }
 
-.discarding {
-  animation: discarding 1s ease-out;
-}
-
-@keyframes discarding {
-  0% { overflow: hidden;}
-  50% { transform: translateX(30%);
-    margin-right: 4vw; 
-    overflow: hidden;
-    }
-  100% { transform: translateX(100%) translateY(-50%);
-          width: 2vw;
-          height: 1.5vh; 
-          overflow: hidden;
-          opacity: 0;
-          margin-right: 1vw;
-        color: rgb(230, 171, 94);
-      visibility: hidden;}
-}
-
 
 
 .card-pile-card {
@@ -1073,7 +1059,7 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   line-height: 3vmin;
   color: rgb(0, 0, 0);
   float: right;
-  transition: background-color 0.3s;
+  transition: background-color 0.25s;
  }
 
 
@@ -1439,7 +1425,9 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   #drawPile:hover #drawDiv,
 #discardPile:hover #discardDiv,
 #playerDeckPile:hover #deckDiv {
-  animation: fadeIn 1s;
+  animation: fadeIn 1.5s;
+  /* -webkit-animation-delay: 3s;
+  animation-delay: 3s; */
   display: block;
 }
 .card-reward:hover .invisible-cost, .card-reward:hover .paid-invisible-cost {
@@ -1702,4 +1690,206 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 .non-buyable-card {
   color: rgb(153, 5, 5);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.discarding-0 {
+  animation: discard-0 2s ease-out;
+}
+
+.discarding-1 {
+  animation: discard-1 2s ease-out;
+}
+
+.discarding-2 {
+  animation: discard-2 2s ease-out;
+}
+
+.discarding-3 {
+  animation: discard-3 2s ease-out;
+}
+
+.discarding-4 {
+  animation: discard-4 2s ease-out;
+}
+.discarding-5 {
+  animation: discard-5 2s ease-out;
+}
+.discarding-6 {
+  animation: discard-6 2s ease-out;
+}
+.discarding-7 {
+  animation: discard-7 2s ease-out;
+}
+.play-discarding {
+  animation: discarding 2s ease-out;
+}
+
+/* @keyframes discarding {
+  0% { overflow: hidden;}
+  50% { transform: translateX(30%);
+    margin-right: 4vw;
+    width: 2vw;
+    height: 2.5vh; 
+    overflow: hidden;
+    background-color: brown;
+    }
+  100% { transform: translateX(100%) translateY(-50%);
+          width: 0.1vw;
+          height: 0.1vh; 
+          overflow: hidden;
+          opacity: 0;
+          margin-right: 0vw;
+          background-color: brown;
+        color: rgb(230, 171, 94);
+      visibility: hidden;}
+} */
+
+@keyframes discard-0 {
+  0% { overflow: hidden;}
+  50% {
+    margin-right: 4vw;
+    width: 10vw;
+    height: 6vh;
+    overflow: hidden;
+    background-color: brown;
+    }
+      100% { transform: translateX(20vw) translateY(-5vh);
+        overflow: hidden;
+        opacity: 0;
+        margin-right: 2vw;
+        background-color: brown;
+      color: rgb(230, 171, 94);
+    visibility: hidden;}
+}
+
+@keyframes discard-1 {
+  0% { overflow: hidden;}
+  50% {
+    margin-right: 4vw;
+    width: 10vw;
+    height: 6vh;
+    overflow: hidden;
+    background-color: brown;
+    }
+      100% { transform: translateX(9vw) translateY(-5vh);
+        overflow: hidden;
+        opacity: 0;
+        margin-right: 2vw;
+        background-color: brown;
+      color: rgb(230, 171, 94);
+    visibility: hidden;}
+}
+
+@keyframes discard-2 {
+  0% { overflow: hidden;}
+  50% {
+    margin-right: 4vw;
+    width: 10vw;
+    height: 6vh;
+    overflow: hidden;
+    background-color: brown;
+    }
+  100% { transform: translateX(20vw) translateY(-5vh);
+          overflow: hidden;
+          opacity: 0;
+          margin-right: 2vw;
+          background-color: brown;
+        color: rgb(230, 171, 94);
+      visibility: hidden;}
+}
+
+@keyframes discard-3 {
+  0% { overflow: hidden;}
+  50% {
+    margin-right: 4vw;
+    width: 10vw;
+    height: 6vh;
+    overflow: hidden;
+    background-color: brown;
+    }
+  100% { transform:translateX(9vw) translateY(-5vh);
+          width: 1vw;
+          height: 1vh; 
+          overflow: hidden;
+          opacity: 0;
+          margin-right: 2vw;
+          background-color: brown;
+        color: rgb(230, 171, 94);
+      visibility: hidden;}
+}
+
+@keyframes discard-4 {
+  0% { overflow: hidden;}
+  50% {
+    margin-right: 4vw;
+    width: 10vw;
+    height: 6vh;
+    overflow: hidden;
+    background-color: brown;
+    }
+  100% { transform: translateX(20vw) translateY(-10vh);
+          overflow: hidden;
+          opacity: 0;
+          margin-right: 2vw;
+          background-color: brown;
+        color: rgb(230, 171, 94);
+      visibility: hidden;}
+}
+@keyframes discard-5 {
+  0% { overflow: hidden;}
+  50% {
+    margin-right: 4vw;
+    width: 10vw;
+    height: 6vh;
+    overflow: hidden;
+    background-color: brown;
+    }
+  100% { transform:translateX(9vw) translateY(-10vh);
+          overflow: hidden;
+          opacity: 0;
+          margin-right: 2vw;
+          background-color: brown;
+        color: rgb(230, 171, 94);
+      visibility: hidden;}
 }
